--- a/python/fate_client/pipeline/component_define/fate/hetero_lr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_lr.yaml
@@ -2,7 +2,7 @@ component:
   name: hetero_lr
   description: ''
   provider: fate
-  version: 2.0.0.alpha
+  version: 2.0.0-alpha
   labels: []
   roles:
     - guest
@@ -10,27 +10,200 @@ component:
     - arbiter
   input_definitions:
     parameters:
-      learning_rate:
-        type: float
-        default: 0.1
-        optional: true
       max_iter:
-        type: int
-        default: 100
+        type: parameter_max_iter
+        default: 20
         optional: true
+        description: max iteration num
+        type_meta:
+          title: parameter_max_iter
+          type: object
+          properties:
+            data:
+              title: Data
+              default: 20
+              exclusiveMinimum: 0
+              type: integer
+      early_stop:
+        type: parameter_early_stop
+        default: diff
+        optional: true
+        description: early stopping criterion, choose from {weight_diff, diff, abs,
+          val_metrics}
+        type_meta:
+          title: parameter_early_stop
+          type: object
+          properties:
+            data:
+              title: Data
+              default: diff
+              type: string
+      tol:
+        type: parameter_tol
+        default: 0.0001
+        optional: true
+        description: ''
+        type_meta:
+          title: parameter_tol
+          type: object
+          properties:
+            data:
+              title: Data
+              default: 0.0001
+              minimum: 0
+              type: number
       batch_size:
-        type: int
-        default: 100
+        type: parameter_batch_size
+        default: -1
         optional: true
+        description: batch size, value less or equals to 0 means full batch
+        type_meta:
+          title: parameter_batch_size
+          type: object
+          properties:
+            data:
+              title: Data
+              default: -1
+              minimum: -1
+              type: integer
+      optimizer:
+        type: parameter_optimizer
+        default:
+          method: sgd
+          penalty: l2
+          alpha: 1.0
+          optimizer_params:
+            lr: 0.01
+            weight_decay: 0
+        optional: true
+        description: optimizer, select method from {'sgd', 'nesterov_momentum_sgd',
+          'adam', 'rmsprop', 'adagrad', 'sqn'} for list of configurable arguments,
+          refer to torch.optim
+        type_meta:
+          title: parameter_optimizer
+          type: object
+          properties:
+            data:
+              title: Data
+              default:
+                method: sgd
+                penalty: l2
+                alpha: 1.0
+                optimizer_params:
+                  lr: 0.01
+                  weight_decay: 0
+              allOf:
+                - $ref: '#/definitions/OptimizerParam'
+          definitions:
+            OptimizerParam:
+              title: OptimizerParam
+              type: object
+              properties:
+                method:
+                  title: Method
+                  default: sgd
+                  type: string
+                penalty:
+                  title: Penalty
+                  default: l2
+                  type: string
+                alpha:
+                  title: Alpha
+                  default: 1.0
+                  type: number
+                optimizer_params:
+                  title: Optimizer Params
+                  type: object
+              required:
+                - optimizer_params
+      learning_rate_scheduler:
+        type: parameter_learning_rate_scheduler
+        default:
+          method: constant
+          scheduler_params:
+            gamma: 0.1
+        optional: true
+        description: learning rate scheduler, select method from {'step', 'linear',
+          'constant'}for list of configurable arguments, refer to torch.optim.lr_scheduler
+        type_meta:
+          title: parameter_learning_rate_scheduler
+          type: object
+          properties:
+            data:
+              title: Data
+              default:
+                method: constant
+                scheduler_params:
+                  gamma: 0.1
+              allOf:
+                - $ref: '#/definitions/LRSchedulerParam'
+          definitions:
+            LRSchedulerParam:
+              title: LRSchedulerParam
+              type: object
+              properties:
+                method:
+                  title: Method
+                  default: constant
+                  type: string
+                scheduler_params:
+                  title: Scheduler Params
+                  type: object
+      init_param:
+        type: parameter_init_param
+        default:
+          method: zeros
+          fill_val: 0.0
+          fit_intercept: true
+        optional: true
+        description: Model param init setting.
+        type_meta:
+          title: parameter_init_param
+          type: object
+          properties:
+            data:
+              title: Data
+              default:
+                method: zeros
+                fill_val: 0.0
+                fit_intercept: true
+              allOf:
+                - $ref: '#/definitions/InitParam'
+          definitions:
+            InitParam:
+              title: InitParam
+              type: object
+              properties:
+                method:
+                  title: Method
+                  default: zeros
+                  type: string
+                fill_val:
+                  title: Fill Val
+                  default: 0.0
+                  anyOf:
+                    - type: integer
+                    - type: number
+                fit_intercept:
+                  title: Fit Intercept
+                  default: true
+                  type: boolean
+      threshold:
+        type: parameter_threshold
+        default: 0.5
+        optional: true
+        description: predict threshold for binary data
+        type_meta:
+          title: parameter_threshold
+          type: object
+          properties:
+            data:
+              title: Data
+              default: 0.5
+              minimum: 0.0
+              maximum: 1.0
+              type: number
     artifacts:
-      train_data:
-        type: dataset
-        optional: false
-        stages:
-          - train
-        roles:
-          - guest
-          - host
       validate_data:
         type: dataset
         optional: true
@@ -39,14 +212,16 @@ component:
         roles:
           - guest
           - host
-      input_model:
-        type: model
+        description: validation data
+      train_data:
+        type: dataset
         optional: false
         stages:
-          - predict
+          - train
         roles:
           - guest
           - host
+        description: training data
       test_data:
         type: dataset
         optional: false
@@ -55,6 +230,16 @@ component:
         roles:
           - guest
           - host
+        description: ''
+      input_model:
+        type: model
+        optional: false
+        stages:
+          - predict
+        roles:
+          - guest
+          - host
+        description: ''
   output_definitions:
     artifacts:
       train_output_data:
@@ -65,21 +250,7 @@ component:
         roles:
           - guest
           - host
-      train_output_metric:
-        type: metric
-        optional: false
-        stages:
-          - train
-        roles:
-          - arbiter
-      output_model:
-        type: model
-        optional: false
-        stages:
-          - train
-        roles:
-          - guest
-          - host
+        description: ''
       test_output_data:
         type: dataset
         optional: false
@@ -88,5 +259,22 @@ component:
         roles:
           - guest
           - host
+        description: ''
+      output_model:
+        type: model
+        optional: false
+        stages:
+          - train
+        roles:
+          - guest
+          - host
+        description: ''
+      train_output_metric:
+        type: loss
+        optional: false
+        stages:
+          - train
+        roles:
+          - arbiter
+        description: ''
 schema_version: v1
-
