Update Homo-NN Component: yaml & parameter
Signed-off-by: cwj <talkingwallace@sohu.com>

--- a/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
@@ -38,7 +38,7 @@ component:
               type: string
       source:
         type: parameter_source
-        default: ''
+        default:
         optional: true
         description: path to your setup script folder
         type_meta:
@@ -47,8 +47,9 @@ component:
           properties:
             data:
               title: Data
-              default: ''
               type: string
+          required:
+            - data
       setup_conf:
         type: parameter_setup_conf
         default: {}
