--- a/python/fate_client/pipeline/component_define/fate/intersection.yaml
+++ b/python/fate_client/pipeline/component_define/fate/intersection.yaml
@@ -2,35 +2,51 @@ component:
   name: intersection
   description: ''
   provider: fate
-  version: 2.0.0.alpha
+  version: 2.0.0-alpha
   labels: []
   roles:
     - guest
     - host
-  input_definitions:
-    parameters:
-      method:
-        type: str
-        default: raw
-        optional: true
-    artifacts:
+  parameters:
+    method:
+      type: parameter_method
+      default: raw
+      optional: true
+      description: ''
+      type_meta:
+        title: parameter_method
+        type: object
+        properties:
+          data:
+            title: Data
+            default: raw
+            type: string
+  input_artifacts:
+    data:
       input_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - default
         roles:
           - guest
           - host
-  output_definitions:
-    artifacts:
+        description: ''
+        is_multi: false
+    model: {}
+  output_artifacts:
+    data:
       output_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - default
         roles:
           - guest
           - host
+        description: ''
+        is_multi: false
+    model: {}
+    metric: {}
 schema_version: v1
 
