--- a/python/fate_client/pipeline/component_define/fate/feature_scale.yaml
+++ b/python/fate_client/pipeline/component_define/fate/feature_scale.yaml
@@ -7,108 +7,108 @@ component:
   roles:
     - guest
     - host
-  input_definitions:
-    parameters:
-      method:
-        type: parameter_method
-        default: standard
-        optional: false
-        description: ''
-        type_meta:
-          title: parameter_method
-          type: object
-          properties:
-            data:
-              title: Data
-              default: standard
+  parameters:
+    use_anonymous:
+      type: parameter_use_anonymous
+      default: false
+      optional: true
+      description: bool, whether interpret `scale_col` as anonymous column names
+      type_meta:
+        title: parameter_use_anonymous
+        type: object
+        properties:
+          data:
+            title: Data
+            default: false
+            type: boolean
+    strict_range:
+      type: parameter_strict_range
+      default: true
+      optional: true
+      description: whether transformed value to be strictly restricted within given
+        range; effective for 'min_max' scale method only
+      type_meta:
+        title: parameter_strict_range
+        type: object
+        properties:
+          data:
+            title: Data
+            default: true
+            type: boolean
+    scale_idx:
+      type: parameter_scale_idx
+      default:
+      optional: true
+      description: list of column index to be scaled, if None, all columns will be
+        scaled; only one of {scale_col, scale_idx} should be specified
+      type_meta:
+        title: parameter_scale_idx
+        type: object
+        properties:
+          data:
+            title: Data
+            type: array
+            items:
+              type: integer
+              minimum: 0
+        required:
+          - data
+    scale_col:
+      type: parameter_scale_col
+      default:
+      optional: true
+      description: list of column names to be scaled, if None, all columns will be
+        scaled; only one of {scale_col, scale_idx} should be specified
+      type_meta:
+        title: parameter_scale_col
+        type: object
+        properties:
+          data:
+            title: Data
+            type: array
+            items:
               type: string
-      feature_range:
-        type: parameter_feature_range
-        default:
-          - 0
-          - 1
-        optional: true
-        description: 'Result feature value range for `min_max` method, take either
-          dict in format: {col_name: [min, max]} for specific columns or [min, max]
-          for all columns. Columns unspecified will be scaled to default range [0,1]'
-        type_meta:
-          title: parameter_feature_range
-          type: object
-          properties:
-            data:
-              title: Data
-              default:
-                - 0
-                - 1
-              anyOf:
-                - type: array
-                  items: { }
-                - type: object
-      scale_col:
-        type: parameter_scale_col
-        default:
-        optional: true
-        description: list of column names to be scaled, if None, all columns will
-          be scaled; only one of {scale_col, scale_idx} should be specified
-        type_meta:
-          title: parameter_scale_col
-          type: object
-          properties:
-            data:
-              title: Data
-              type: array
-              items:
-                type: string
-          required:
-            - data
-      scale_idx:
-        type: parameter_scale_idx
-        default:
-        optional: true
-        description: list of column index to be scaled, if None, all columns will
-          be scaled; only one of {scale_col, scale_idx} should be specified
-        type_meta:
-          title: parameter_scale_idx
-          type: object
-          properties:
-            data:
-              title: Data
-              type: array
-              items:
-                type: integer
-                minimum: 0
-          required:
-            - data
-      strict_range:
-        type: parameter_strict_range
-        default: true
-        optional: true
-        description: whether transformed value to be strictly restricted within given
-          range; effective for 'min_max' scale method only
-        type_meta:
-          title: parameter_strict_range
-          type: object
-          properties:
-            data:
-              title: Data
-              default: true
-              type: boolean
-      use_anonymous:
-        type: parameter_use_anonymous
-        default: false
-        optional: true
-        description: bool, whether interpret `scale_col` as anonymous column names
-        type_meta:
-          title: parameter_use_anonymous
-          type: object
-          properties:
-            data:
-              title: Data
-              default: false
-              type: boolean
-    artifacts:
+        required:
+          - data
+    feature_range:
+      type: parameter_feature_range
+      default:
+        - 0
+        - 1
+      optional: true
+      description: 'Result feature value range for `min_max` method, take either dict
+        in format: {col_name: [min, max]} for specific columns or [min, max] for all
+        columns. Columns unspecified will be scaled to default range [0,1]'
+      type_meta:
+        title: parameter_feature_range
+        type: object
+        properties:
+          data:
+            title: Data
+            default:
+              - 0
+              - 1
+            anyOf:
+              - type: array
+                items: {}
+              - type: object
+    method:
+      type: parameter_method
+      default: standard
+      optional: false
+      description: ''
+      type_meta:
+        title: parameter_method
+        type: object
+        properties:
+          data:
+            title: Data
+            default: standard
+            type: string
+  input_artifacts:
+    data:
       train_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - train
@@ -116,8 +116,9 @@ component:
           - guest
           - host
         description: ''
+        is_multi: false
       test_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - predict
@@ -125,8 +126,10 @@ component:
           - guest
           - host
         description: ''
+        is_multi: false
+    model:
       input_model:
-        type: model
+        type: model_json
         optional: false
         stages:
           - predict
@@ -134,10 +137,11 @@ component:
           - guest
           - host
         description: ''
-  output_definitions:
-    artifacts:
+        is_multi: false
+  output_artifacts:
+    data:
       train_output_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - train
@@ -145,8 +149,9 @@ component:
           - guest
           - host
         description: ''
+        is_multi: false
       test_output_data:
-        type: dataset
+        type: dataframe
         optional: false
         stages:
           - predict
@@ -154,8 +159,10 @@ component:
           - guest
           - host
         description: ''
+        is_multi: false
+    model:
       output_model:
-        type: model
+        type: model_json
         optional: false
         stages:
           - train
@@ -163,4 +170,6 @@ component:
           - guest
           - host
         description: ''
+        is_multi: false
+    metric: {}
 schema_version: v1
