--- a/python/fate_client/pipeline/component_define/fate/evaluation.yaml
+++ b/python/fate_client/pipeline/component_define/fate/evaluation.yaml
@@ -8,39 +8,40 @@ component:
     - guest
     - host
     - arbiter
-  input_definitions:
-    parameters:
-      default_eval_metrics:
-        type: parameter_default_eval_metrics
-        default: binary
-        optional: true
-        description: ''
-        type_meta:
-          title: parameter_default_eval_metrics
-          type: object
-          properties:
-            data:
-              title: Data
-              default: binary
-              type: string
-      metrics:
-        type: parameter_metrics
-        default:
-        optional: true
-        description: ''
-        type_meta:
-          title: parameter_metrics
-          type: object
-          properties:
-            data:
-              title: Data
-              type: array
-              items: {}
-          required:
-            - data
-    artifacts:
+  parameters:
+    default_eval_metrics:
+      type: parameter_default_eval_metrics
+      default: binary
+      optional: true
+      description: ''
+      type_meta:
+        title: parameter_default_eval_metrics
+        type: object
+        properties:
+          data:
+            title: Data
+            default: binary
+            type: string
+    metrics:
+      type: parameter_metrics
+      default:
+      optional: true
+      description: ''
+      type_meta:
+        title: parameter_metrics
+        type: object
+        properties:
+          data:
+            title: Data
+            type: array
+            items: {}
+        required:
+          - data
+  input_artifacts:
+    data:
       input_data:
-        type: dataset
+        types:
+          - dataframe
         optional: false
         stages:
           - default
@@ -49,17 +50,22 @@ component:
           - host
           - arbiter
         description: ''
-  output_definitions:
-    artifacts:
-      output_metric:
-        type: classification_metrics
+        is_multi: true
+    model: {}
+  output_artifacts:
+    data: {}
+    model: {}
+    metric:
+      json_metric_output:
+        types:
+          - json_metric
         optional: false
         stages:
           - default
         roles:
           - guest
           - host
-          - arbiter
         description: ''
+        is_multi: false
 schema_version: v1
 
